fix: text overflow

--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@
     --mode-toggle-border: #666;
     --mode-toggle-text: #f0f0f0;
     --transition-duration: 0.4s; 
+    --scale-duration: 0.3s;
+    --opacity-duration: 0.3s;
 }
 
 [data-theme="light"] {
@@ -40,6 +42,8 @@
     --mode-toggle-border: #ccc;
     --mode-toggle-text: #333;
     --transition-duration: 0.5s; 
+    --scale-duration: 0.3s;
+    --opacity-duration: 0.3s;
 }
 
 body {
@@ -48,6 +52,7 @@ body {
     transition: background-color var(--transition-duration), color var(--transition-duration);
     margin: 0;
     padding: 0;
+    font-family: Arial, sans-serif;
 }
 
 #game-container {
@@ -59,6 +64,8 @@ body {
     padding: 20px;
     position: relative;
     transition: background-color var(--transition-duration), color var(--transition-duration);
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 #grid {
@@ -83,19 +90,19 @@ body {
     line-height: 40px;
     text-align: center;
     font-size: 20px;
-    transition: background-color 1s, color 0.8s;
-    animation: colorFadeAndScale 1s ease-out;
+    transition: background-color var(--transition-duration), color var(--transition-duration), transform var(--scale-duration);
+    animation: colorFadeAndScale var(--transition-duration) ease-out;
 }
 
 @keyframes colorFadeAndScale {
     0% {
-        background-color: var(--present-bg-);
-        transform: scale(1);
-        opacity: 0.8;
+        background-color: var(--current-bg);
+        transform: scale(0.9);
+        opacity: 0.6;
     }
     50% {
         background-color: var(--correct-bg);
-        transform: scale(1.1);
+        transform: scale(1.05);
         opacity: 1;
     }
     100% {
@@ -104,30 +111,28 @@ body {
     }
 }
 
-
 .row .cell:nth-child(1) { animation-delay: 0s; }
 .row .cell:nth-child(2) { animation-delay: 0.1s; }
 .row .cell:nth-child(3) { animation-delay: 0.2s; }
 .row .cell:nth-child(4) { animation-delay: 0.3s; }
 .row .cell:nth-child(5) { animation-delay: 0.4s; }
 
-
 .correct {
     background-color: var(--correct-bg);
     color: var(--correct-text);
-    animation: colorFadeAndScale 1s ease-out;
+    animation: colorFadeAndScale var(--transition-duration) ease-out;
 }
 
 .present {
     background-color: var(--present-bg);
     color: var(--text-color);
-    animation: colorFadeAndScale 1s ease-out;
+    animation: colorFadeAndScale var(--transition-duration) ease-out;
 }
 
 .absent {
     background-color: var(--absent-bg);
     color: var(--text-color);
-    animation: colorFadeAndScale 1s ease-out;
+    animation: colorFadeAndScale var(--transition-duration) ease-out;
 }
 
 #keyboard {
@@ -140,13 +145,11 @@ body {
     margin-bottom: 5px;
 }
 
-.keyboard-row:nth-child(1) button,
-.keyboard-row:nth-child(2) button,
-.keyboard-row:nth-child(3) button {
+.keyboard-row button {
     width: 34px;
     height: 40px;
     font-size: 16px;
-    transition: background-color 1s, color 0.8s; 
+    transition: background-color var(--transition-duration), color var(--transition-duration), transform var(--scale-duration);
 }
 
 .keyboard-row:nth-child(2) button {
@@ -164,24 +167,19 @@ button {
     background-color: var(--button-bg);
     color: var(--button-text);
     cursor: pointer;
-    transition: background-color 0.2s, color 0.2s;
+    transition: background-color var(--transition-duration), color var(--transition-duration), transform var(--scale-duration);
 }
 
 button:hover {
     background-color: var(--button-bg);
     opacity: 0.8;
+    transform: scale(1.05);
 }
 
 button:active {
     background-color: var(--button-bg);
     opacity: 0.6;
-}
-
-button.disabled {
-    background-color: var(--button-disabled-bg);
-    color: var(--button-disabled-text);
-    cursor: not-allowed;
-    border: 1px solid var(--button-disabled-bg);
+    transform: scale(0.95);
 }
 
 .action-button {
@@ -190,16 +188,19 @@ button.disabled {
     font-size: 16px;
     background-color: var(--action-button-bg);
     margin: 0 5px;
+    transition: background-color var(--transition-duration), color var(--transition-duration), transform var(--scale-duration);
 }
 
 .action-button:hover {
     background-color: var(--action-button-bg);
     opacity: 0.8;
+    transform: scale(1.05);
 }
 
 .action-button:active {
     background-color: var(--action-button-bg);
     opacity: 0.6;
+    transform: scale(0.95);
 }
 
 #mode-toggle {
@@ -213,44 +214,28 @@ button.disabled {
     border-radius: 4px;
     cursor: pointer;
     font-size: 14px;
-    transition: background-color 0.2s, color 0.8s, transform 0.8s;
+    transition: background-color var(--transition-duration), color var(--transition-duration), transform var(--scale-duration);
 }
 
 #mode-toggle:hover {
     background-color: var(--mode-toggle-bg);
     color: var(--mode-toggle-text);
     opacity: 0.8;
+    transform: scale(1.05);
 }
 
 #mode-toggle:active {
     background-color: var(--mode-toggle-bg);
     color: var(--mode-toggle-text);
     opacity: 0.6;
+    transform: scale(0.95);
 }
 
 #mode-toggle:focus {
     outline: none;
-    transform: scale(1.05);
+    transform: scale(1.1);
 }
 
-.key {
-    transition: background-color 0.3s, color 0.3s; 
-}
-
-.key.correct {
-    background-color: var(--correct-bg);
-    color: var(--correct-text);
-}
-
-.key.present {
-    background-color: var(--present-bg);
-    color: var(--text-color);
-}
-
-.key.absent {
-    background-color: var(--absent-bg);
-    color: var(--text-color);
-}
 #mute-toggle {
     position: absolute;
     top: 10px;
@@ -262,22 +247,24 @@ button.disabled {
     border-radius: 4px;
     cursor: pointer;
     font-size: 14px;
-    transition: background-color 0.2s, color 0.8s, transform 0.8s;
+    transition: background-color var(--transition-duration), color var(--transition-duration), transform var(--scale-duration);
 }
 
 #mute-toggle:hover {
     background-color: var(--button-bg);
     opacity: 0.8;
+    transform: scale(1.05);
 }
 
 #mute-toggle:active {
     background-color: var(--button-bg);
     opacity: 0.6;
+    transform: scale(0.95);
 }
 
 #mute-toggle:focus {
     outline: none;
-    transform: scale(1.05);
+    transform: scale(1.1);
 }
 
 #mute-icon {
@@ -287,3 +274,43 @@ button.disabled {
 #mute-text {
     font-size: 16px;
 }
+
+button {
+    margin: 2px;
+    border: 1px solid var(--button-border);
+    border-radius: 4px;
+    background-color: var(--button-bg);
+    color: var(--button-text);
+    cursor: pointer;
+    transition: background-color var(--transition-duration), color var(--transition-duration), transform var(--scale-duration);
+}
+
+.delete-button,
+.submit-button {
+    width: 80px; 
+    height: 40px;
+    font-size: 16px; 
+    border-radius: 4px; 
+    margin: 0 10px; 
+    padding: 8px; 
+}
+
+button:hover {
+    background-color: var(--button-bg);
+    opacity: 0.8;
+    transform: scale(1.05);
+}
+
+button:active {
+    background-color: var(--button-bg);
+    opacity: 0.6;
+    transform: scale(0.95);
+}
+
+button.disabled {
+    background-color: var(--button-disabled-bg);
+    color: var(--button-disabled-text);
+    cursor: not-allowed;
+    border: 1px solid var(--button-disabled-bg);
+}
+
